@@ -18,6 +18,7 @@ Changes in 3.3:
 - Make sure saving torrent in search plugin to existing file works
 - Add home page for search plugin like the one in konqueror
 - Clarify message when checking for files in completed downloads directory (208992)
+- Use KUrl::toLocalFile instead of KUrl::path, path prepends / on windows, which breaks things
 
 Changes in 3.3beta1:
 - Cleanup plugin list (180402)
